src/legacy/chrome/content/style/placeholderPrompt.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

@import url("chrome://global/skin/global.css");
@import url("chrome://messenger/skin/input-fields.css");


menulist {
    height: 2em;
    border: 1px solid #b1b1b3;
    border-radius: 0;
}

#prompt-icon {
    margin-left: 6px;
    margin-right: 6px;
}

/* UI hack for Thunderbird 114 and newer */
dialog[data-dlg-cutoff="true"] #placeholder-value,
dialog[data-dlg-cutoff="true"] #select-placeholder-value-menu {
    margin-right: 24px;
}

#placeholder-value {
    width: 380px;	
}

#select-placeholder-value-menu {
    width: 390px;
}

